--- a/src/App.css
+++ b/src/App.css
@@ -462,7 +462,7 @@ h6 {
 /* end of roomlist */
 /*  rooms fitler*/
 .filter-container {
-  padding: 5rem 0;
+  padding-top: 5rem;
 }
 .filter-form {
   width: 60vw;
